# trash_tracking

./: .dockerignore  .flake8  .git-config-recommended.md  .gitattributes  .gitignore  .pre-commit-config.yaml  BDD_REWRITE_PLAN.md  CHANGELOG.md  CLAUDE.md  CLEANUP_RECOMMENDATIONS.md  DEVELOPMENT.md  Dockerfile  INTEGRATION_GUIDE.md  INTEGRATION_SUMMARY.md  INTEGRATION_TEST_REPORT.md  LICENSE  MANUAL_TEST_GUIDE.md  MONOREPO_MIGRATION_PLAN.md  QUICK_DEPLOY.md  QUICK_START_ADDON.md  README.md  REFACTORING_PLAN.md  SCHEDULE_OPTIMIZATION_PLAN.md  TESTING_COMPLETE.md  app.py  cli.py  config.yaml  custom_components  docker-compose.yml  hacs.json  pyproject.toml  repository.yaml  requirements-dev.txt  requirements.txt  run  sonar-project.properties  test_config_flow.py
.github/workflows/: build-addon.yml  ci.yml  hassfest.yml  release.yml  validate-hacs.yml
apps/addon/: Dockerfile  app.py  app_new.py  config.example.yaml  docker-compose.yml  pyproject.toml
apps/addon/addon/api/: routes.py
apps/addon/addon/api/setup/: routes.py  template.py
apps/addon/addon/use_cases/: auto_suggest_config.py  exceptions.py
apps/cli/: _setup_path.py  cli.py  pyproject.toml
apps/integration/: README.md
apps/integration/custom_components/trash_tracking/: __init__.py  _setup_path.py  binary_sensor.py  config_flow.py  coordinator.py  manifest.json  sensor.py  strings.json
apps/integration/custom_components/trash_tracking/trash_tracking_core/utils/: geocoding.py
custom_components/trash_tracking/: README.md  __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  manifest.json  ntpc_api.py  sensor.py  strings.json  tracker.py
custom_components/trash_tracking/models/: __init__.py  point.py  truck.py
custom_components/trash_tracking/translations/: en.json  zh-Hant.json
custom_components/trash_tracking/trash_tracking_core/: __init__.py
custom_components/trash_tracking/trash_tracking_core/clients/: __init__.py  ntpc_api.py
custom_components/trash_tracking/trash_tracking_core/core/: __init__.py  point_matcher.py  response_builder.py  state_machine.py  state_manager.py  tracker.py
custom_components/trash_tracking/trash_tracking_core/models/: __init__.py  point.py  tracking_window.py  truck.py
custom_components/trash_tracking/trash_tracking_core/utils/: __init__.py  config.py  geocoding.py  route_analyzer.py
docs/: ADD_ON_INSTALLATION.md  API_CACHE.md  CI_CD_SETUP.md  COMPLEXITY_ANALYSIS.md  HA_OS_DEPLOYMENT.md  HOME_ASSISTANT_DEPLOYMENT.md  SCHEDULE_ISSUE_ANALYSIS.md  SETUP_PAT.md  VERSIONING.md  api-specification.md  architecture.md  requirements.md
features/: README.md  api_status.feature  cli_query.feature  config_flow.feature  environment.py  integration_addon_coexistence.feature  integration_config_flow.feature  integration_entities.feature  integration_imports.feature  setup_wizard.feature  truck_tracking.feature
features/fixtures/: __init__.py  mock_api_data.py
features/steps/: api_steps.py  cli_steps.py  config_flow_steps.py  integration_imports_steps.py  integration_steps.py  setup_wizard_steps.py  truck_tracking_steps.py
scripts/: README.md  bump-version.sh  sync_core.py
src/api/: routes.py
src/api/setup/: __init__.py  routes.py  template.py
src/clients/: ntpc_api.py
src/core/: point_matcher.py  state_manager.py  tracker.py
src/models/: point.py  truck.py
src/use_cases/: auto_suggest_config.py  dtos.py
src/utils/: config.py  geocoding.py  logger.py  route_analyzer.py
tests/: conftest.py  test_api_cache.py  test_api_routes.py  test_cli.py  test_config_flow_manual.py  test_imports.py  test_models.py  test_ntpc_api_integration.py  test_point_matcher.py  test_schedule_optimization.py  test_state_manager.py
tests/clients/: test_ntpc_api.py
tests/core/: test_location.py  test_point_matcher.py  test_response_builder.py  test_state_machine.py  test_state_manager.py  test_tracker.py
tests/integration/: README.md  test_api_status.py  test_cli_query.py  test_setup_wizard_api.py
tests/models/: test_point.py  test_tracking_window.py  test_truck.py
tests/utils/: test_geocoding.py  test_route_analyzer.py
trash_tracking_addon/: .dockerignore  CHANGELOG.md  DOCS.md  Dockerfile  ICON_README.md  PACKAGE_SUMMARY.md  README.md  build.yaml  config.yaml  generate_icon.py  repository.json  run.sh
trash_tracking_addon/translations/: en.yaml  zh-Hant.yaml
