[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trash-tracking-addon"
version = "2025.11.6"
description = "Home Assistant Add-on for New Taipei City Garbage Truck Tracking"
authors = [
    {name = "Logan", email = "iml885203@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "trash-tracking-core",
    "flask>=3.0.0",
    "gunicorn>=21.2.0",
    "pytz>=2024.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["addon*"]
