[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trash-tracking-cli"
version = "2025.11.6"
description = "CLI Tool for New Taipei City Garbage Truck Tracking"
authors = [
    {name = "Logan", email = "iml885203@gmail.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "trash-tracking-core",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
]

[project.scripts]
trash-tracking = "cli:main"
